[package]
name = "totebag"
version = "0.6.0"
description = "A tool for extracting/archiving files and directories in multiple formats."
repository = "https://github.com/tamada/totebag"
readme = "README.md"
authors = [
    "Haruaki Tamada <tamada_f@ke_cafebabe.jp>"
]
license = "MIT"
categories = ["command-line-utilities", "compression"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzip2 = "0.4.4"
cab = "0.6.0"
clap = { version = "4.5.26", features = ["derive"] }
delharc = "0.6.1"
flate2 = "1.0.35"
ignore = "0.4.23"
log = "0.4.25"
sevenz-rust = "0.6.0"
tar = "0.4.43"
time = "0.3.37"
unrar = "0.5.7"
xz2 = "0.1.7"
zip = "2.1.0"
zstd = "0.13.2"

[build-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.42"
toml = "0.8.12"

