[package]
name = "totebag"
version = "0.7.7"
description = "A tool for extracting/archiving files and directories in multiple formats."
repository = "https://github.com/tamada/totebag"
readme = "README.md"
authors = [
    "Haruaki Tamada <tamada_f@ke_cafebabe.jp>"
]
license-file = "LICENSE"
categories = ["command-line-utilities", "compression", "archivers"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzip2 = "0.4.4" # the newer version 0.5.0 does not work well.
cab = "0.6.0"
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["derive"] }
clap-num = "1.2.0"
clap_complete = "4.5.42"
delharc = { version = "0.6.1", features = ["lh1", "lz"] }
env_logger = "0.11.6"
flate2 = "1.0.35"
humansize = "2.1.3"
ignore = "0.4.23"
log = "0.4.25"
sevenz-rust = "0.6.0"
tar = "0.4.43"
time = "0.3.37"
typed-builder = "0.20.0"
unrar = "0.5.7"
xz2 = "0.1.7"
zip = "2.1.0"
zstd = "0.13.2"
