[workspace]
members = [ "lib", "cli" ]
resolver = "3"

[workspace.package]
version = "0.8.10"
edition = "2024"
repository = "https://github.com/tamada/totebag"
readme = "README.md"
authors = [
    "Haruaki Tamada <tamada_f@ke_cafebabe.jp>"
]
license-file = "LICENSE"
categories = ["command-line-utilities", "compression", "archivers"]
keywords = [ "cli", "archiver" ]
