[package]
name = "totebag-cli"
readme = "README.md"
description = "A tool for extracting/archiving files and directories in multiple formats."
categories = ["command-line-utilities", "compression", "archivers"]
version.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
totebag = { path = "../lib" }
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["derive"] }
clap-num = "1.2.0"
clap_complete = "4.5.42"
env_logger = "0.11.6"
humansize = "2.1.3"
log = "0.4.25"
time = "0.3.37"

[[bin]]
name = "totebag"
path = "src/main.rs"
