[package]
name = "totebag"
readme = "README.md"
description = "An API for extracting/archiving files and directories in multiple formats."
categories = ["command-line-utilities", "compression", "archivers"]
version.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.27"
bzip2 = "0.6.1" # the newer version 0.5.0 does not work well.
cab = "0.6.0"
chrono = { version = "0.4.39", features = [ "serde" ] }
delharc = { version = "0.6.1", features = [ "lh1", "lz" ] }
env_logger = "0.11.6"
flate2 = "1.0.35"
ignore = "0.4.23"
log = "0.4.25"
sevenz-rust = "0.6.0"
tar = "0.4.43"
time = "0.3.37"
typed-builder = "0.23.2"
unrar = "0.5.7"
xz2 = "0.1.7"
zip = "7.0.0"
zstd = "0.13.2"
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.145"
humansize = "2.1.3"
serde-xml-rs = "0.8.1"
